// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H5 component should accept and render passed in styles 1`] = `
.c0 {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3125rem;
  margin: initial;
}

<h5
  className="c0 sc-1hocjyp-2 bDZEWb"
>
  Salmon text
</h5>
`;

exports[`the H5 component should render 1`] = `
.c0 {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3125rem;
  margin: initial;
}

<h5
  className="c0 sc-1hocjyp-2 bDZEWb"
>
  Default H5 text
</h5>
`;

exports[`the H5 component should render a loading state 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.875rem;
  margin: calc(1.3125rem - 0.875rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H5 component should render a loading state via context 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.875rem;
  margin: calc(1.3125rem - 0.875rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H5 component should render a loading state with vertical rhythm (withMargins) 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.875rem;
  margin: 0.86625rem 0 0.65625rem 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H5 component should render with vertical rhythm (withMargins) 1`] = `
.c0 {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3125rem;
  margin: 0.86625rem 0 0.65625rem 0;
}

<h5
  className="c0 sc-1hocjyp-2 bDZEWb"
>
  H5 text with vertical rhythm styled via margin.
</h5>
`;
